--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Text Game</title>
+    <title>Landsbysimulator</title>
 </head>
 <body>
-    <div id="game-container">
-        <h1 id="score">Score: 0</h1>
-        <button id="click-button">Click</button>
-        <button id="idle-button">Start Idle</button>
+    <div id="village-container">
+        <h1 id="population">Befolkning: 0</h1>
+        <button id="add-resident">Tilføj Beboer</button>
+        <button id="collect-resources">Indsaml Ressourcer</button>
+        <button id="upgrade-building">Opgrader Bygning</button>
     </div>
 
-    <script src="game.js"></script>
+    <script src="village.js"></script>
 </body>
 </html>
