--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,10 @@
 <body>
     <div id="village-container">
         <h1 id="population">Befolkning: 0</h1>
-        <button id="add-resident">Tilføj Beboer</button>
-        <button id="collect-resources">Indsaml Ressourcer</button>
-        <button id="upgrade-building">Opgrader Bygning</button>
+        <button id="add-resident">Tilføy Beboer</button>
+        <button id="collect-resources">Innsamling av Ressurser</button>
+        <button id="upgrade-building">Oppgrader Bygning</button>
+        <div id="resident-icons"></div>
     </div>
 
     <script src="village.js"></script>
