--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <button id="collect-resources">Innsamling av Ressurser</button>
         <button id="upgrade-building">Oppgrader Bygning</button>
         <div id="resident-icons"></div>
+        <button id="restart-game">Start Spillet På Nytt</button>
     </div>
 
     <script src="village.js"></script>
