--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div id="village-container">
         <h1 id="population">Befolkning: 0</h1>
+        <h2 id="resident-count">Landsbybeboere: 0</h2>
+        <h2 id="house-count">Bolighus: 0</h2>
         <button id="add-resident">Tilføy Beboer</button>
         <button id="collect-resources">Innsamling av Ressurser</button>
         <button id="upgrade-building">Oppgrader Bygning</button>
@@ -20,8 +22,12 @@
         let population = parseInt(localStorage.getItem('population')) || 0;
         let resources = parseInt(localStorage.getItem('resources')) || 0;
         let buildingLevel = parseInt(localStorage.getItem('buildingLevel')) || 1;
+        let residentCounter = 0;
+        let houseCounter = 0;
 
         const populationElement = document.getElementById('population');
+        const residentCountElement = document.getElementById('resident-count');
+        const houseCountElement = document.getElementById('house-count');
         const addResidentButton = document.getElementById('add-resident');
         const collectResourcesButton = document.getElementById('collect-resources');
         const upgradeBuildingButton = document.getElementById('upgrade-building');
@@ -34,13 +40,17 @@
         restartGameButton.addEventListener('click', restartGame);
 
         updatePopulation();
+        updateResidentCount();
+        updateHouseCount();
         updateResources();
         createResidentIcons();
 
         // Add resident event handler
         function addResident() {
             population++;
+            residentCounter++;
             updatePopulation();
+            updateResidentCount();
             createResidentIcon();
             checkForHouseTransformation();
         }
@@ -69,10 +79,14 @@
             population = 0;
             resources = 0;
             buildingLevel = 1;
+            residentCounter = 0;
+            houseCounter = 0;
             // Clear resident icons
             residentIconsContainer.innerHTML = '';
             // Update UI
             updatePopulation();
+            updateResidentCount();
+            updateHouseCount();
             updateResources();
         }
 
@@ -81,6 +95,16 @@
             populationElement.textContent = `Befolkning: ${population}`;
             // Save data to local storage
             localStorage.setItem('population', population);
+        }
+
+        // Update resident count on the UI
+        function updateResidentCount() {
+            residentCountElement.textContent = `Landsbybeboere: ${residentCounter}`;
+        }
+
+        // Update house count on the UI
+        function updateHouseCount() {
+            houseCountElement.textContent = `Bolighus: ${houseCounter}`;
         }
 
         // Update resources on the UI
@@ -109,14 +133,25 @@
 
         // Check for house transformation
         function checkForHouseTransformation() {
-            const residentIcons = document.querySelectorAll('.resident-icon');
-            if (residentIcons.length >= 10) {
+            if (residentCounter >= 10) {
                 // Transform the last 10 residents into a house
                 for (let i = 0; i < 10; i++) {
-                    const residentIcon = residentIcons[i];
-                    residentIcon.innerHTML = '🏠'; // Emoji icon for house
+                    const residentIcon = residentIconsContainer.lastChild;
+                    residentIconsContainer.removeChild(residentIcon);
                 }
+                createHouseIcon();
+                residentCounter = 0;
             }
+        }
+
+        // Create a house icon
+        function createHouseIcon() {
+            const houseIcon = document.createElement('div');
+            houseIcon.className = 'house-icon';
+            houseIcon.innerHTML = '🏠'; // Emoji icon for house
+            residentIconsContainer.appendChild(houseIcon);
+            houseCounter++;
+            updateHouseCount();
         }
     </script>
 </body>
