--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="village-container">
         <h1 id="population">Befolkning: 0</h1>
-        <h2 id="resident-count">Landsbybeboere: 0</h2>
         <h2 id="house-count">Bolighus: 0</h2>
+        <h2 id="gold-count">Gull: 0</h2>
         <button id="add-resident">Tilføy Beboer</button>
         <button id="collect-resources">Innsamling av Ressurser</button>
         <button id="upgrade-building">Oppgrader Bygning</button>
