--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Legg dette i head-seksjonen av HTML-filen -->
+<link rel="stylesheet" type="text/css" href="styles.css">
+
     <title>Landsbysimulator</title>
 </head>
 <body>
