--- a/index.html/index.html
+++ b/index.html/index.html
@@ -25,8 +25,12 @@
         <h1>Matvareliste</h1>
 
         <div>
-            <label for="ingredient">Legg til matvare:</label>
-            <input type="text" id="ingredient" placeholder="Skriv inn matvare">
+            <label for="ingredient-name">Matvarenavn:</label>
+            <input type="text" id="ingredient-name" placeholder="Skriv inn matvarenavn">
+
+            <label for="ingredient-quantity">Kvantum (kilo):</label>
+            <input type="number" id="ingredient-quantity" placeholder="Skriv inn kvantum">
+
             <button onclick="addIngredient()">Legg til</button>
         </div>
 
@@ -43,13 +47,24 @@
         const ingredientList = [];
 
         function addIngredient() {
-            const ingredientInput = document.getElementById('ingredient');
-            const ingredient = ingredientInput.value.trim();
+            const nameInput = document.getElementById('ingredient-name');
+            const quantityInput = document.getElementById('ingredient-quantity');
 
-            if (ingredient !== '') {
+            const name = nameInput.value.trim();
+            const quantity = quantityInput.value.trim();
+
+            if (name !== '' && quantity !== '' && !isNaN(quantity) && parseFloat(quantity) > 0) {
+                const ingredient = {
+                    name: name,
+                    quantity: parseFloat(quantity)
+                };
+
                 ingredientList.push(ingredient);
                 updateIngredientList();
-                ingredientInput.value = '';
+                nameInput.value = '';
+                quantityInput.value = '';
+            } else {
+                alert('Vennligst fyll ut gyldige verdier for matvarenavn og kvantum.');
             }
         }
 
@@ -59,7 +74,7 @@
 
             ingredientList.forEach(ingredient => {
                 const li = document.createElement('li');
-                li.textContent = ingredient;
+                li.textContent = `${ingredient.name} (${ingredient.quantity} kg)`;
                 ingredientsUl.appendChild(li);
             });
         }
@@ -73,7 +88,7 @@
             }
 
             const randomIngredient = ingredientList[Math.floor(Math.random() * ingredientList.length)];
-            const meal = `Din tilfeldige matrett: ${randomIngredient} med noe annet!`;
+            const meal = `Din tilfeldige matrett: ${randomIngredient.name} med noe annet!`;
             mealParagraph.textContent = meal;
         }
     </script>
