--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
         <div class="upgrades">
             <button onclick="buyUpgrade('clickUpgrade')" id="clickUpgrade">Upgrade Click (+1 Gold per Click)</button>
             <button onclick="buyUpgrade('passiveUpgrade')" id="passiveUpgrade">Upgrade Passive Income (+1 Gold per second)</button>
+<div class="game-container">
+    <div class="chat-box" id="output"></div>
+    <button onclick="clickGold()" id="clickButton">Click for Gold</button>
+    <div class="upgrades">
+        <button onclick="buyUpgrade('clickUpgrade')" id="clickUpgrade">Upgrade Click (+1 Gold per Click)</button>
+        <button onclick="buyUpgrade('passiveUpgrade')" id="passiveUpgrade">Upgrade Passive Income (+1 Gold per second)</button>
+    </div>
+    <button onclick="resetGame()" id="resetButton">Reset Game</button>
+</div>
+
+<!-- ... (existing HTML code) ... -->
+
         </div>
     </div>
     <script src="script.js"></script>
