--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real Estate</title>
+  <title>Hematron</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Idle Game</h1>
+  <h1>Hematron autobot</h1>
   <div id="goldDisplay">Gold: <span id="gold">0</span></div>
   <button id="button" onclick="clickButton()">Click to Generate Gold</button>
 
