--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <h1>Hematron autobot</h1>
   <div id="goldDisplay">Gold: <span id="gold">0</span></div>
-  <button id="button" onclick="clickButton()">Click to Generate Gold</button>
+  <button id="button" onclick="clickButton()">Metal Plates</button>
 
   <div id="upgrades">
     <div id="houseUpgrade" class="upgrade" onclick="buyUpgrade('house')">Buy House (20 Gold)</div>
