--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
   <h1>Hematron autobot</h1>
-  <div id="goldDisplay">Gold: <span id="gold">0</span></div>
+  <div id="goldDisplay">Metal Plates <span id="gold">0</span></div>
   <button id="button" onclick="clickButton()">Metal Plates</button>
 
   <div id="upgrades">
-    <div id="houseUpgrade" class="upgrade" onclick="buyUpgrade('house')">Buy House (20 Gold)</div>
+    <div id="houseUpgrade" class="upgrade" onclick="buyUpgrade('house')">Buy plate duplicator</div>
   </div>
 
   <script src="script.js"></script>
