--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <h1>Hematron autobot</h1>
-  <div id="goldDisplay">Metal Plates <span id="gold">0</span></div>
+  <div id="goldDisplay">Metal Plates <span id="Metal Plates">0</span></div>
   <button id="button" onclick="clickButton()">Metal Plates</button>
 
   <div id="upgrades">
