--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <button id="button" onclick="clickButton()">Click to Generate Metal Plates</button>
 
   <div id="upgrades">
-    <div id="houseUpgrade" class="upgrade" onclick="buyUpgrade('house')">Buy Factory</div>
+    <div id="factoryUpgrade" class="upgrade" onclick="buyUpgrade('factory')">Buy Factory</div>
+    <div id="screwUpgrade" class="upgrade" onclick="buyUpgrade('screw')" style="display: none;">Buy Screw Generator</div>
   </div>
 
   <script src="script.js"></script>
