--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <div id="upgrades">
     <div id="factoryUpgrade" class="upgrade" onclick="buyUpgrade('factory')">Buy Factory</div>
     <div id="screwUpgrade" class="upgrade" onclick="buyUpgrade('screw')" style="display: none;">Buy Screw Generator</div>
+    <div id="buyScrews" class="upgrade" onclick="buyScrews()" style="display: none;">Buy Screws</div>
   </div>
+
+  <div id="screwDisplay">Screws: <span id="screws">0</span></div>
 
   <script src="script.js"></script>
 </body>
