--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
 
   <h1>Dreadforge Citadel</h1>
-  <div id="metalPlateDisplay">Metal Plates: <span id="metalPlates">0</span></div>
+  <div id="resourceList">
+    <div id="metalPlateDisplay">Metal Plates: <span id="metalPlates">0</span> (+<span id="passiveIncome">0</span>/s)</div>
+    <div id="screwDisplay" style="display: none;">Screws: <span id="screws">0</span></div>
+  </div>
+
   <button id="button" onclick="clickButton()">Click to Generate Metal Plates</button>
 
   <div id="upgrades">
@@ -17,8 +21,6 @@
     <div id="screwUpgrade" class="upgrade" onclick="buyUpgrade('screw')" style="display: none;">Buy Screw Generator</div>
     <div id="buyScrews" class="upgrade" onclick="buyScrews()" style="display: none;">Buy Screws</div>
   </div>
-
-  <div id="screwDisplay">Screws: <span id="screws">0</span></div>
 
   <script src="script.js"></script>
 </body>
