--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <h1>Plant RPG</h1>
         <p>Oxygen: <span id="oxygen">0</span></p>
         <p>CO2: <span id="co2">0</span></p>
+        <p id="message">You notice your house plant is out of shape. You give it some water.</p>
         <button onclick="clickPlant()">Click the Plant</button>
         <button onclick="upgradePlant()">Upgrade Plant</button>
+        <button onclick="waterPlant()">Water Plant</button>
     </div>
     <script src="script.js"></script>
 </body>
