--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <div id="container">
         <h1>Plant RPG</h1>
-        <p>Oxygen: <span id="oxygen">0</span></p>
         <p>CO2: <span id="co2">0</span></p>
-        <p id="message">You notice your house plant is out of shape. You give it some water.</p>
+        <p id="message"></p>
         <button onclick="waterPlant()">Water the Plant</button>
     </div>
     <script src="script.js"></script>
