--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
         <h1>Plant RPG</h1>
         <p>CO2: <span id="co2">0</span></p>
+        <p>Oxygen: <span id="oxygen">0</span></p>
         <p>Total Oxygen: <span id="totalOxygen">0</span></p>
         <p>Level: <span id="level">1</span></p>
         <p id="message"></p>
