--- a/index.html
+++ b/index.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Plant RPG</title>
+    <title>Tale of the House Plant</title>
 </head>
 <body>
-    <div id="container">
-        <h1>Plant RPG</h1>
-        <p>CO2: <span id="co2">0</span></p>
-        <p>Oxygen: <span id="oxygen">0</span></p>
-        <p>Total Oxygen: <span id="totalOxygen">0</span></p>
-        <p>Level: <span id="level">1</span></p>
-        <p id="message"></p>
-        <button onclick="waterPlant()">Water the Plant</button>
+    <div class="container">
+        <h1>Tale of the House Plant</h1>
+        <a href="second-page.html" class="button">Start the adventure</a>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
