--- a/second-page.html
+++ b/second-page.html
@@ -8,8 +8,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>Tale of the House Plant - Part 2</h1>
-        <!-- Content for the second page -->
+        <h1>Your House Plant</h1>
+        <div id="plant-container">
+            <img src="your-plant-image.jpg" alt="Your House Plant" id="plant-image">
+            <div class="progress-container">
+                <div class="progress-bar" id="progress-bar"></div>
+            </div>
+            <button id="water-button">Water the Plant</button>
+        </div>
+        <div id="evolution-options" class="hidden">
+            <h2>Choose an Evolution:</h2>
+            <button id="evolution1">Evolution 1</button>
+            <button id="evolution2">Evolution 2</button>
+            <button id="evolution3">Evolution 3</button>
+            <button id="evolution4">Evolution 4</button>
+        </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
