--- a/second-page.html
+++ b/second-page.html
@@ -15,6 +15,7 @@
                 <div class="progress-bar" id="progress-bar"></div>
             </div>
             <button id="water-button">Water the Plant</button>
+            <p id="happiness-text"></p>
         </div>
         <div id="evolution-options" class="hidden">
             <h2>Choose an Evolution:</h2>
