--- a/second-page.html
+++ b/second-page.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Your House Plant</h1>
         <div id="plant-container">
-            <img src="IMG_0443.webp"alt="Your House Plant" id="plant-image">
+            <img src="your-plant-image.jpg" alt="Your House Plant" id="plant-image">
             <div class="progress-container">
                 <div class="progress-bar" id="progress-bar"></div>
             </div>
@@ -23,6 +23,11 @@
             <button id="evolution2">Evolution 2</button>
             <button id="evolution3">Evolution 3</button>
             <button id="evolution4">Evolution 4</button>
+        </div>
+        <div id="passive-income" class="hidden">
+            <p id="evolution-text"></p>
+            <img src="" alt="" id="evolution-image">
+            <p>Passive Income: <span id="mana-counter">0</span> mana</p>
         </div>
     </div>
     <script src="script.js"></script>
