--- a/second-page.html
+++ b/second-page.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Your House Plant</h1>
         <div id="plant-container">
-            <img src="your-plant-image.jpg" alt="Your House Plant" id="plant-image">
+            <img src="IMG_0443.webp" alt="Your House Plant" id="plant-image">
             <div class="progress-container">
                 <div class="progress-bar" id="progress-bar"></div>
             </div>
