--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <div class="textbox" id="storyBox">
-      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family.</p>
-      <button onclick="makeChoice('earnGold')">Choose Path 1</button>
-      <button onclick="makeChoice('gainStrength')">Choose Path 2</button>
-      <button onclick="makeChoice('enhanceIntelligence')">Choose Path 3</button>
-      <button onclick="makeChoice('increaseSpeed')">Choose Path 4</button>
+      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below:</p>
+      <button onclick="makeChoice('earnGold')">Two words: old money. Your family was very rich, but that did not help them. Regardless, you learned the ropes from your father and know how to handle money. (Gain gold 40% faster)</button>
+      <button onclick="makeChoice('gainStrength')">You come from a long linage of warriors and fighters. Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)</button>
+      <button onclick="makeChoice('enhanceIntelligence')">Your family was probably targeted because of fear. The enemy soldiers bombarded the family mansion without hesitation, and you understand them: your family had magical powers and could easily defended themselves if they had been ready. No one knew that the attack was coming, so they all died. (40% bonus to maagical traits)</button>
+      <button onclick="makeChoice('increaseSpeed')">Your childhood was different. Your father bailed out, and your mother was left with 4 kids and nothing else. Sneaking into other peoples houses and stealing their properties was a necessary evil. (40% bonus to dexterity and stealth</button>
     </div>
     <div class="hidden" id="goldButton">
       <button onclick="earnGold()">Earn Gold</button>
