--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="container">
     <div class="textbox" id="storyBox">
       <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below:</p>
-      <button onclick="makeChoice('earnGold')">Two words: old money. Your family was very rich, but that did not help them. Regardless, you learned the ropes from your father and know how to handle money. (Gain gold 40% faster)</button>
-      <button onclick="makeChoice('gainStrength')">You come from a long linage of warriors and fighters. Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)</button>
-      <button onclick="makeChoice('enhanceIntelligence')">Your family was probably targeted because of fear. The enemy soldiers bombarded the family mansion without hesitation, and you understand them: your family had magical powers and could easily defended themselves if they had been ready. No one knew that the attack was coming, so they all died. (40% bonus to maagical traits)</button>
-      <button onclick="makeChoice('increaseSpeed')">Your childhood was different. Your father bailed out, and your mother was left with 4 kids and nothing else. Sneaking into other peoples houses and stealing their properties was a necessary evil. (40% bonus to dexterity and stealth</button>
+      <button onclick="makeChoice('earnGold')">Two words: old money. Your family was very rich, but that did not help them. <br> Regardless, you learned the ropes from your father and know how to handle money. (Gain gold 40% faster)</button>
+      <button onclick="makeChoice('gainStrength')">You come from a long linage of warriors and fighters. <br> Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)</button>
+      <button onclick="makeChoice('enhanceIntelligence')">Your family was probably targeted because of fear. <br> The enemy soldiers bombarded the family mansion without hesitation, <br> and you understand them: your family had magical powers and could easily defended themselves if they had been ready. <br> No one knew that the attack was coming, so they all died. (40% bonus to maagical traits)</button>
+      <button onclick="makeChoice('increaseSpeed')">Your childhood was different. Your father bailed out, and your mother was left with 4 kids and nothing else.<br> Sneaking into other peoples houses and stealing their properties was a necessary evil. (40% bonus to dexterity and stealth</button>
     </div>
     <div class="hidden" id="goldButton">
       <button onclick="earnGold()">Earn Gold</button>
