--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
   <div class="container">
     <div class="textbox" id="storyBox">
-      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below:</p>
-      <button onclick="makeChoice('earnGold')">Two words: old money. Your family was very rich, but that did not help them. <br> Regardless, you learned the ropes from your father and know how to handle money. (Gain gold 40% faster)</button>
-      <button onclick="makeChoice('gainStrength')">You come from a long linage of warriors and fighters. <br> Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)</button>
-      <button onclick="makeChoice('enhanceIntelligence')">Your family was probably targeted because of fear. <br> The enemy soldiers bombarded the family mansion without hesitation, <br> and you understand them: your family had magical powers and could easily defended themselves if they had been ready. <br> No one knew that the attack was coming, so they all died. (40% bonus to maagical traits)</button>
-      <button onclick="makeChoice('increaseSpeed')">Your childhood was different. Your father bailed out, and your mother was left with 4 kids and nothing else.<br> Sneaking into other peoples houses and stealing their properties was a necessary evil. (40% bonus to dexterity and stealth</button>
+      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below. <br> Each particular choice gives you a bonus
+      and other certain advantages.</p>
+      <button onclick="makeChoice('earnGold')">Two words: old money. Your family was very rich, but that did not help them. <br> Regardless, you learned the ropes from your father and know how to handle money.
+        (Gain gold 40% faster)</button><br>
+      <button onclick="makeChoice('gainStrength')">You come from a long lineage of warriors and fighters. <br> Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)</button><br>
+      <button onclick="makeChoice('enhanceIntelligence')">Your mother made the floow wash themselves, and your father could make objects float in the air.(40% bonus to maagical traits)</button><br>
+      <button onclick="makeChoice('increaseSpeed')">Your mother and father had nothing, and you had to steal to not starve<br> Sneaking into other peoples houses and stealing their properties
+        was a necessary evil. (40% bonus to dexterity) </button><br>
     </div>
     <div class="hidden" id="goldButton">
       <button onclick="earnGold()">Earn Gold</button>
