--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body>
   <div class="container">
     <div class="textbox" id="storyBox">
-      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below. <br> Each particular choice gives you a bonus
-      and other certain advantages.</p>
-      <button onclick="makeChoice('earnGold')">Two words: old money. Your family was very rich, but that did not help them. <br> Regardless, you learned the ropes from your father and know how to handle money.
-        (Gain gold 40% faster)</button><br>
-      <button onclick="makeChoice('gainStrength')">You come from a long lineage of warriors and fighters. <br> Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)</button><br>
-      <button onclick="makeChoice('enhanceIntelligence')">Your mother made the floor wash themselves, and your father could make objects float in the air. (40% bonus to magical traits)</button><br>
-      <button onclick="makeChoice('increaseSpeed')">Your mother and father had nothing, and you had to steal to not starve. <br> Sneaking into other people's houses and stealing their properties was a necessary evil. (40% bonus to dexterity)</button><br>
+      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below. <br> Each particular choice gives you a bonus and other certain advantages.</p>
+      <button onclick="makeChoice('earnGold', 'Two words: old money. Your family was very rich, but that did not help them. <br> Regardless, you learned the ropes from your father and know how to handle money. (Gain gold 40% faster)')">Choose Path 1</button><br>
+      <button onclick="makeChoice('gainStrength', 'You come from a long lineage of warriors and fighters. <br> Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)')">Choose Path 2</button><br>
+      <button onclick="makeChoice('enhanceIntelligence', 'Your mother made the floor wash themselves, and your father could make objects float in the air. (40% bonus to magical traits)')">Choose Path 3</button><br>
+      <button onclick="makeChoice('increaseSpeed', 'Your mother and father had nothing, and you had to steal to not starve. <br> Sneaking into other people\'s houses and stealing their properties was a necessary evil. (40% bonus to dexterity)')">Choose Path 4</button><br>
     </div>
     <div class="hidden" id="goldButton">
       <p id="additionalText"></p>
