--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <p id="additionalText"></p>
       <button onclick="earnGold()">Earn Gold</button>
       <p id="goldCounter">0/50</p>
+    <button id="buyWalletButton" onclick="buyWallet()">Buy Larger Wallet (Cost: 100 Gold)</button>
     </div>
   </div>
   <script src="script.js"></script>
