--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="hidden" id="goldButton">
       <p id="additionalText"></p>
-      <button onclick="earnGold()">Earn Gold</button>
+      <button onclick="earnGold()">Beg for money</button>
       <p id="goldCounter">0/50</p>
     <button id="buyWalletButton" onclick="buyWallet()">Buy Larger Wallet (Cost: 50 Gold)</button>
     </div>
