--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <button onclick="earnGold()">Beg for money</button>
       <p id="goldCounter">0/50</p>
     <button id="buyWalletButton" onclick="buyWallet()">Buy Larger Wallet (Cost: 50 Gold)</button>
+      <button id="upgradeButton" onclick="buyUpgrade()">Buy a Beggars Permit from the city. Get a place on the high street.(Cost: 100 Gold)</button>
+
     </div>
   </div>
   <script src="script.js"></script>
