--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <button id="upgradeButton" onclick="buyUpgrade()">Buy a Beggars Permit from the city. Get a place on the high street.(Cost: 100 Gold)</button>
 <button id="upgradeButton" onclick="buyShovel()">Buy Shovel (Cost: 250 Gold)</button>
 <button id="manualLaborButton" onclick="manualLabor()" style="display: none;">Manual Labor</button>
+      <button onclick="fillWallet()">Fyll opp lommeboken helt</button>
+
    </div>
     <div class="hidden" id="inventoryBox">
   <h2>Inventory</h2>
