--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p id="goldCounter">0/50</p>
     <button id="buyWalletButton" onclick="buyWallet()">Buy Larger Wallet (Cost: 50 Gold)</button>
       <button id="upgradeButton" onclick="buyUpgrade()">Buy a Beggars Permit from the city. Get a place on the high street.(Cost: 100 Gold)</button>
-<button id="upgradeButton" onclick="buyShovel()">Buy Shovel (Cost: 250 Gold)</button>
+<button id="buyShovelButton" onclick="buyShovel()">Buy Shovel (Cost: 250 Gold)</button>
 <button id="manualLaborButton" onclick="manualLabor()" style="display: none;">Manual Labor</button>
 <button onclick="fillWallet()">Fyll opp lommeboken helt</button>     
 
