--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <div class="container">
     <div class="textbox" id="storyBox">
-      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below. <br> Each particular choice gives you a bonus and other certain advantages.</p>
+      <p>War has torn the continent apart. Whole cities have been pillaged and burned to the ground. You are the only survivor from your family. Choose your background below. <br> 
+        Each choice will lead to different bonuses and options.</p>
       <button onclick="makeChoice('earnGold', 'Two words: old money. Your family was very rich, but that did not help them. <br> Regardless, you learned the ropes from your father and know how to handle money. (Gain gold 40% faster)')">Wealthy</button><br>
       <button onclick="makeChoice('gainStrength', 'You come from a long lineage of warriors and fighters. <br> Rigorous physical training is something you knew from a very young age. (40% bonus to physical traits)')">Strong</button><br>
       <button onclick="makeChoice('enhanceIntelligence', 'Your mother made the floors wash themselves, and your father could make objects float in the air. (40% bonus to magical traits)')">Magical</button><br>
