--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div id="gold-container">
         <p id="gold-text">Gold: <span id="gold">0</span></p>
-        <button id="generateGoldBtn" onclick="generateGold()">Generate Gold</button>
+        <button id="generateGoldBtn" onclick="generateGold()">Beg</button>
     </div>
     <div id="inventory-container">
         <p>Inventory:</p>
