--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<div id="storyBox">
+  <p>
+    The war has finally ended, but your family is dead. Your city has burned to the ground, and you fled to a nearby small village.
+    You find yourself begging on the street.
+  </p>
+</div>
+
 <button id="counterButton">0/20</button>
 
 <script src="script.js"></script>
